# splendsp

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
splendsp/: __init__.py
splendsp/cut/: _cut.py
splendsp/dsp/: __init__.py  _fitting.py  _of_nxm_cov.py  _of_pileup.py  _utils.py
src/splendsp/: __init__.py
src/splendsp/cut/: __init__.py  _utils.py
src/splendsp/dsp/: __init__.py  _de_pileup.py  _fitting.py  _noise.py  _of_nxm_cov.py  _utils.py
src/splendsp/plot/: _plot.py
