[metadata]
name = splendsp
description = Splendid Digital Signal Processing of time series data for small physics experiments
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/splendor-collab/splendsp
author = SPLENDOR Collaboration
maintainer = SPLENDOR collaboration
license = MIT
license_file = LICENSE
license_files = LICENSE

[options]
packages = find:
install_requires =
    numpy
    scipy
    matplotlib
python_requires = >=3.6
package_dir =
    = src
zip_safe = False

[options.packages.find]
where = src
